# searchfiles-multidesktop

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  README.txt  TODO.md  docker-run-05sh.sh  docker-run01.sh  docker-run02.sh  docker-run03.sh  docker-run04.sh  docker-wayland+vnc.txt  fix-wayland-permissions.sh  foldersearch.pro  foldersearch.qrc  foldersearch.rc  getinfo.desktop.in  getinfo.pro  getinfo.qrc  getinfo.rc  getinfo.sln  getinfo.todo.txt  getinfo.vcxproj  getinfo.vcxproj.filters
cmake/: LinuxDeployQt.cmake
images/: Info.plist  getinfo.icns
installers/inno/: foldersearch.bat  foldersearch.iss  getinfo.bat  getinfo.iss
installers/qtifw/: README.md  foldersearch.pro
installers/qtifw/config/: config.xml  style.qss
resources/: aboutdialog.html  getinfo.desktop.in  getinfo.qrc
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.html  common.h  common.hpp  config.cpp  config.h  config.hpp  coroutine_task.hpp  cpp.hint  dockwidgets.qrc  exlineedit.cpp  exlineedit.h  fileremover-amzq.hpp  fileremover-claude.hpp  fileremover-v2.hpp  fileremover-v3.hpp  fileremover.hpp  folderscanner.cpp  folderscanner.hpp  foldersearch.cpp  foldersearch.hpp  get_readable_thread_id.hpp  getinfo.cpp  getinfo.h  helpdialog.cpp  helpdialog.h  helpdialog.hpp  ifileremover.hpp  keypress.cpp  keypress.hpp  macutils.mm  main.cpp  mainwindow.cpp  mainwindow.hpp  precompiled.cpp  precompiled.h  qt-file-readall.cpp  qt-folder-scan.cpp  scanparams.hpp  (+15 more)
tests/: CMakeLists.txt  test_folderscanner.cpp
